# svg2gpx

./: .gitignore  LICENSE  PACKAGING.md  README.md  benchmark.py  best_route.py  chicago_map.py  gen.py  preview_features.py  pyproject.toml  requirements-osm.txt  requirements.txt  result.csv  test_inner_features.py  test_routing.py
.github/workflows/: best-route.yml
chicago_maps/: Crow_route.geojson  Knight_route.geojson  Pawn_route.geojson  Shark_route.geojson  chicago_results.csv  circle_route.geojson  donut_route.geojson  face_route.geojson  lshape_route.geojson  square_route.geojson  star_route.geojson
docs/: approach-post-mortem.md  deformation-plan.md  recognizability-plan.md  rendering-fidelity-plan.md  routing-fidelity-plan.md
src/svg2gpx/: __init__.py  benchmark.py  best_route.py  chicago_map.py  cli.py  gen.py  gpx.py  preview_features.py
src/svg2gpx/shapes/: __init__.py
tests/: test_inner_features.py  test_routing.py
