[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "svg2gpx"
version = "0.4.0"
description = "Turn any SVG shape into a runnable GPS-art route on real city streets."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Chieler", email = "chielerli@gmail.com" }]
keywords = ["gps art", "strava art", "gpx", "svg", "running", "route",
            "openstreetmap", "gps drawing", "route art"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "numpy",
    "scipy",
    "shapely",
    "opencv-python-headless",
    "skia-python",
]

[project.optional-dependencies]
osm = ["osmnx", "matplotlib"]
dev = ["build", "twine"]

[project.scripts]
svg2gpx = "svg2gpx.cli:main"

[project.urls]
Homepage = "https://github.com/Chieler/svg2gpx"
Issues = "https://github.com/Chieler/svg2gpx/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
svg2gpx = ["shapes/*.svg"]
